JAVA/project-10th/src/main/java/com/example/project10th/error/ErrorData.java
package com.example.project10th.error;

import lombok.Data;

@Data
public class ErrorData {
    private InputRestriction inputRestriction;
}
